force-app/main/default/objects/NAICS__c/fields/Index_Name__c.field-meta.xml
<CustomField>
    <fullName>Index_Name__c</fullName>
    <label>Index Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>