force-app/main/default/objects/NAICS__c/fields/Industry_Group__c.field-meta.xml
<CustomField>
    <fullName>Industry_Group__c</fullName>
    <label>Industry Group</label>
    <length>4</length>
    <type>Text</type>
</CustomField>