force-app/main/default/objects/NAICS__c/fields/Industry_Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Industry_Group_Name__c</fullName>
    <label>Industry Group Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>