force-app/main/default/objects/NAICS__c/fields/Sector__c.field-meta.xml
<CustomField>
    <fullName>Sector__c</fullName>
    <label>Sector</label>
    <length>2</length>
    <type>Text</type>
</CustomField>