force-app/main/default/objects/NAICS__c/fields/Sector_Name__c.field-meta.xml
<CustomField>
    <fullName>Sector_Name__c</fullName>
    <label>Sector Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>