force-app/main/default/objects/NAICS__c/fields/Sub_Sector__c.field-meta.xml
<CustomField>
    <fullName>Sub_Sector__c</fullName>
    <label>Sub Sector</label>
    <length>3</length>
    <type>Text</type>
</CustomField>