force-app/main/default/objects/NAICS__c/fields/Sub_Sector_Name__c.field-meta.xml
<CustomField>
    <fullName>Sub_Sector_Name__c</fullName>
    <label>Sub Sector Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>